started to write my own onboarding carousel, but just found bootstrap ng library

--- a/src/app/modules/home/pages/onboarding-page/onboarding-page.component.html
+++ b/src/app/modules/home/pages/onboarding-page/onboarding-page.component.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <div class="title"></div>
-    <div class="onboard"></div>
+    <div class="onboard">
+      <mat-card class="card"> Statement </mat-card>
+      <div class="onboard-footer">
+        <div class="skip-button">SKIP</div>
+        <mat-progress-bar class="progress-bar"></mat-progress-bar>
+        <div class="next-button">NEXT</div>
+      </div>
+    </div>
   </body>
 </html>
