--- a/src/app/modules/home/pages/onboarding-page/onboarding-page.component.css
+++ b/src/app/modules/home/pages/onboarding-page/onboarding-page.component.css
@@ -4,8 +4,6 @@ body {
   background-attachment: fixed;
   background-size: cover;
 
-  height: 100vh;
-  margin: 0;
   display: grid;
   grid-template-columns: 30vw auto 30vw;
   /* grid-template-rows: 35vh auto auto 30vh; */
@@ -18,7 +16,41 @@ body {
   margin-top: 3.5vw;
   margin-left: 3.5vw;
   margin-right: 37%;
+  grid-column-start: 1;
+  grid-column-end: 2;
 }
 
-/* .onboard {
-} */
+.onboard {
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.card {
+  margin-top: 3.5vw;
+  min-height: 70%;
+}
+
+.onboard-footer {
+  display: flex;
+  margin-top: 5vh;
+}
+
+.skip-button {
+  color: rgb(0, 217, 255);
+  text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.522);
+  margin-top: 4vh;
+  margin-left: 2vw;
+}
+
+.next-button {
+  color: rgb(0, 217, 255);
+  text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.522);
+  margin-top: 4vh;
+  margin-right: 2vw;
+}
+
+.progress-bar {
+  margin-right: 5vw;
+  margin-left: 5vw;
+  border-radius: 50px;
+}
