--- a/src/app/modules/home/pages/signup-page/signup-page.component.html
+++ b/src/app/modules/home/pages/signup-page/signup-page.component.html
@@ -20,6 +20,6 @@
       <input matInput placeholder="Confirm password" />
     </mat-form-field>
   </form>
-  <div class="create-account">Create account</div>
-  <div class="login">Already onboard? <a>Login</a></div>
+  <div class="signup-button">Create account</div>
+  <div class="addition">Already onboard? <a>Login</a></div>
 </app-auth-template>
