--- a/src/app/modules/home/pages/welcome-page/welcome-page.component.html
+++ b/src/app/modules/home/pages/welcome-page/welcome-page.component.html
@@ -4,16 +4,28 @@
   <h1>HELLO!</h1>
   <p>Start transforming the way</p>
   <p>you enjoy your life</p>
-  <div class="create-account">Create account</div>
+  <div class="signup-button">Create account</div>
   <div class="flex-or">
     <hr />
     <p>Or</p>
     <hr />
   </div>
   <div class="flex-pics-social">
-    <p>facebook</p>
+    <!-- <p>facebook</p>
     <p>google</p>
-    <p>twitter</p>
+    <p>twitter</p> -->
+    <img
+      class="image-social"
+      src="../../../../../assets/img/welcome-page/Facebook.svg"
+    />
+    <img
+      class="image-social"
+      src="../../../../../assets/img/welcome-page/Google.svg"
+    />
+    <img
+      class="image-social"
+      src="../../../../../assets/img/welcome-page/Twitter.svg"
+    />
   </div>
-  <div class="login">Already onboard? <a>Login</a></div>
+  <div class="addition">Already onboard? <a>Login</a></div>
 </app-auth-template>
