--- a/src/app/modules/home/pages/login-page/login-page.component.html
+++ b/src/app/modules/home/pages/login-page/login-page.component.html
@@ -1,6 +1,6 @@
 <app-auth-template>
   <div class="blank"></div>
-  <div class="avatar"></div>
+  <div class="circle"></div>
   <h1>LOGIN</h1>
   <form class="signup-form">
     <mat-form-field class="form-field">
@@ -12,16 +12,28 @@
       <input matInput placeholder="Password" />
     </mat-form-field>
   </form>
-  <div class="create-account">Login</div>
+  <div class="login-button">Login</div>
   <div class="flex-or">
     <hr />
     <p>Or</p>
     <hr />
   </div>
   <div class="flex-pics-social">
-    <p>facebook</p>
+    <!-- <p>facebook</p>
     <p>google</p>
-    <p>twitter</p>
+    <p>twitter</p> -->
+    <img
+      class="image-social"
+      src="../../../../../assets/img/welcome-page/Facebook.svg"
+    />
+    <img
+      class="image-social"
+      src="../../../../../assets/img/welcome-page/Google.svg"
+    />
+    <img
+      class="image-social"
+      src="../../../../../assets/img/welcome-page/Twitter.svg"
+    />
   </div>
-  <div class="login">Don't have an account? <a>Signup</a></div>
+  <div class="addition">Don't have an account? <a>Signup</a></div>
 </app-auth-template>
