testing 12 col flex grid layout

--- a/src/app/modules/home/pages/wizard-page/wizard-page.component.html
+++ b/src/app/modules/home/pages/wizard-page/wizard-page.component.html
@@ -13,26 +13,25 @@
       />
     </div>
     <div class="carousel-block">
-      <ngb-carousel #carousel>
+      <ngb-carousel>
         <ng-template ngbSlide class="carousel">
           <div class="title">
             <h2>SETTINGS</h2>
           </div>
-          <h6>What is</h6>
           <div class="subtitle">
+            <h6>What is</h6>
             <h1>YOUR SEX?</h1>
           </div>
-          <tr>
-            <td>
-              <input type="checkbox" />
-            </td>
-            <td>
-              <input type="checkbox" />
-            </td>
-            <td>
-              <input type="checkbox" />
-            </td>
-          </tr>
+          <div class="plates">
+            <button class="plate">
+              <p class="name">Woman</p>
+              <img src="../../../../../assets/img/wizard-page/Female.svg" />
+            </button>
+            <button class="plate">
+              <p class="name">Man</p>
+              <img src="../../../../../assets/img/wizard-page/Male.svg" />
+            </button>
+          </div>
         </ng-template>
 
         <ng-template ngbSlide>
