--- a/src/app/modules/home/pages/wizard-page/wizard-page.component.css
+++ b/src/app/modules/home/pages/wizard-page/wizard-page.component.css
@@ -18,6 +18,53 @@ body {
   margin: auto;
 }
 
+.plates {
+  margin-top: 1.3vw;
+  display: flex;
+  justify-content: space-between;
+}
+
+.plate {
+  width: 28.5vw;
+  height: 19vw;
+  border: none;
+  border-radius: 0.5vw;
+  background-color: white;
+  color: rgb(160, 160, 160);
+  display: flex;
+
+  align-items: center;
+}
+
+.plate img {
+  flex-basis: 200px;
+}
+
+.plate p {
+  margin-left: 2vw;
+}
+
+h6 {
+  font-weight: 400;
+  font-size: 1vw;
+}
+
+h2 {
+  font-weight: 400;
+  font-size: 2vw;
+}
+
+h1 {
+  font-size: 3vw;
+  font-weight: 400;
+}
+
+.subtitle,
+.title {
+  margin-top: 3vw;
+  text-align: left;
+}
+
 .carousel-block {
   height: 100%;
 }
@@ -34,7 +81,7 @@ body {
 }
 
 .toolbar {
-  margin-right: 20%;
+  margin-right: 19%;
   font-size: 1vw;
   color: rgb(0, 225, 255);
 }
