working on shared custom button

--- a/src/app/modules/home/pages/wizard-page/wizard-page.component.html
+++ b/src/app/modules/home/pages/wizard-page/wizard-page.component.html
@@ -23,10 +23,10 @@
             <h1>YOUR SEX?</h1>
           </div>
           <div class="plates">
-            <button class="plate">
+            <app-custom-button inStyle="warning" class="plate">
               <p class="name">Woman</p>
               <img src="../../../../../assets/img/wizard-page/Female.svg" />
-            </button>
+            </app-custom-button>
             <button class="plate">
               <p class="name">Man</p>
               <img src="../../../../../assets/img/wizard-page/Male.svg" />
