--- a/src/app/modules/home/components/test/test.component.html
+++ b/src/app/modules/home/components/test/test.component.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="content">
+    <div fxLayout="column" id="content">
       <div class="navigation">
         <div class="go-back">go back</div>
       </div>
