fully moved to twelve columns layout

--- a/src/app/modules/home/components/auth-template/auth-template.component.html
+++ b/src/app/modules/home/components/auth-template/auth-template.component.html
@@ -5,15 +5,15 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="nav">
-      <img
-        class="back"
-        src="../../../../../assets/img/welcome-page/Goback.svg"
-        alt=""
-      />
-    </div>
-    <div class="title"></div>
-    <div class="form">
+    <div id="content" class="grid">
+      <div class="nav">
+        <img
+          class="back"
+          src="../../../../../assets/img/welcome-page/Goback.svg"
+          alt=""
+        />
+      </div>
+      <div class="logo"></div>
       <mat-card class="card">
         <ng-content> </ng-content>
       </mat-card>
