--- a/src/app/modules/home/components/test/test.component.html
+++ b/src/app/modules/home/components/test/test.component.html
@@ -6,12 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <div fxLayout="column" id="content">
+    <div id="col-grid-content">
       <div class="navigation">
         <div class="go-back">go back</div>
       </div>
       <div class="carousel">carousel here</div>
-      <div class="logo"></div>
+      <!-- <div class="logo"></div> -->
       <div class="toolbar">
         <div class="next">next</div>
       </div>
