--- a/src/app/modules/home/pages/wizard-page/wizard-page.component.html
+++ b/src/app/modules/home/pages/wizard-page/wizard-page.component.html
@@ -23,9 +23,11 @@
             <h1>YOUR SEX?</h1>
           </div>
           <div class="plates">
-            <app-custom-button inStyle="warning" class="plate">
-              <p class="name">Woman</p>
-              <img src="../../../../../assets/img/wizard-page/Female.svg" />
+            <app-custom-button inStyle="warning">
+              <div class="plate">
+                <p class="name">Woman</p>
+                <img src="../../../../../assets/img/wizard-page/Female.svg" />
+              </div>
             </app-custom-button>
             <button class="plate">
               <p class="name">Man</p>
