--- a/src/app/modules/home/components/auth-template/auth-template.component.css
+++ b/src/app/modules/home/components/auth-template/auth-template.component.css
@@ -3,18 +3,91 @@ body {
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
+}
 
-  display: grid;
-  grid-template-rows: 9vh auto;
-  grid-template-columns: 50vw 50vw;
+/* phone styles */
+.grid {
+  max-width: 100%;
 }
 
 .nav {
+  grid-column: 2/10;
+}
+
+.card {
+  grid-column: 2/12;
+  grid-row: 4/11;
+  text-align: center;
+}
+
+.logo {
+  grid-column: 3/7;
+  grid-row: 2;
+  background-image: url("../../../../../assets/img/welcome-page/Logo+Slogan.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+/* tablet styles */
+@media screen and (min-width: 750px) {
+  .grid {
+    max-width: 81.25%;
+  }
+
+  .nav {
+    grid-column: 1/10;
+  }
+
+  .card {
+    grid-column: 2/12;
+    grid-row: 3/8;
+    text-align: center;
+  }
+
+  .logo {
+    grid-column: 4/8;
+    grid-row: 2;
+    background-image: url("../../../../../assets/img/welcome-page/Logo+Slogan.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+}
+
+/* desktop styles */
+@media screen and (min-width: 1200px) {
+  .grid {
+    max-width: 81.25%;
+  }
+
+  .nav {
+    grid-column: 1/13;
+  }
+
+  .card {
+    grid-column: 7/13;
+    grid-row: 3/11;
+    text-align: center;
+  }
+
+  .logo {
+    grid-column: 1/3;
+    grid-row: 4/6;
+    background-image: url("../../../../../assets/img/welcome-page/Logo+Slogan.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  .back {
+    width: 170px;
+  }
+}
+
+/* old thins */
+/* .nav {
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: 2;
-
   margin-left: 12vw;
 }
 
@@ -49,4 +122,4 @@ body {
 .card {
   min-height: 42vw;
   text-align: center;
-}
+} */
