--- a/src/app/modules/home/pages/loading-page/loading-page.component.css
+++ b/src/app/modules/home/pages/loading-page/loading-page.component.css
@@ -3,17 +3,56 @@ body {
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
-
-  display: grid;
-  grid-template-columns: 35vw auto 35vw;
-  grid-template-rows: 35vh auto auto 30vh;
 }
 
+/* desktop styles */
+@media screen and (min-width: 1200px) {
+  body {
+    font-size: 20px;
+  }
+
+  #logo {
+    grid-column: 6/8;
+    grid-row: 5/7;
+    background-image: url("../../../../../assets/img/loading-page/Logo.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+  }
+
+  #loading {
+    grid-column: 6/8;
+    grid-row: 7;
+    margin: auto;
+  }
+}
+
+/* tablet styles */
+@media screen and (min-width: 960px) {
+  body {
+    font-size: 18px;
+  }
+
+  #logo {
+    grid-column: 5/9;
+    grid-row: 5/7;
+    background-image: url("../../../../../assets/img/loading-page/Logo.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+  }
+
+  #loading {
+    grid-column: 6/8;
+    grid-row: 7;
+    margin: auto;
+  }
+}
+
+/* phone styles */
 #logo {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-column: 5/9;
+  grid-row: 5/7;
   background-image: url("../../../../../assets/img/loading-page/Logo.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -21,90 +60,7 @@ body {
 }
 
 #loading {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 3;
-  grid-row-end: 4;
+  grid-column: 6/8;
+  grid-row: 7;
   margin: auto;
-  text-align: center;
-}
-
-/* spinner */
-.lds-spinner {
-  color: official;
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
-}
-.lds-spinner div {
-  transform-origin: 40px 40px;
-  animation: lds-spinner 1.2s linear infinite;
-}
-.lds-spinner div:after {
-  content: " ";
-  display: block;
-  position: absolute;
-  top: 17px;
-  left: 38px;
-  width: 3px;
-  height: 13px;
-  border-radius: 20%;
-  background: #fff;
-}
-.lds-spinner div:nth-child(1) {
-  transform: rotate(0deg);
-  animation-delay: -1.1s;
-}
-.lds-spinner div:nth-child(2) {
-  transform: rotate(30deg);
-  animation-delay: -1s;
-}
-.lds-spinner div:nth-child(3) {
-  transform: rotate(60deg);
-  animation-delay: -0.9s;
-}
-.lds-spinner div:nth-child(4) {
-  transform: rotate(90deg);
-  animation-delay: -0.8s;
-}
-.lds-spinner div:nth-child(5) {
-  transform: rotate(120deg);
-  animation-delay: -0.7s;
-}
-.lds-spinner div:nth-child(6) {
-  transform: rotate(150deg);
-  animation-delay: -0.6s;
-}
-.lds-spinner div:nth-child(7) {
-  transform: rotate(180deg);
-  animation-delay: -0.5s;
-}
-.lds-spinner div:nth-child(8) {
-  transform: rotate(210deg);
-  animation-delay: -0.4s;
-}
-.lds-spinner div:nth-child(9) {
-  transform: rotate(240deg);
-  animation-delay: -0.3s;
-}
-.lds-spinner div:nth-child(10) {
-  transform: rotate(270deg);
-  animation-delay: -0.2s;
-}
-.lds-spinner div:nth-child(11) {
-  transform: rotate(300deg);
-  animation-delay: -0.1s;
-}
-.lds-spinner div:nth-child(12) {
-  transform: rotate(330deg);
-  animation-delay: 0s;
-}
-@keyframes lds-spinner {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
 }
