--- a/src/app/modules/home/pages/loading-page/loading-page.component.html
+++ b/src/app/modules/home/pages/loading-page/loading-page.component.html
@@ -1,27 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div id="logo"></div>
-    <div id="loading">
-      <div class="lds-spinner">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-    </div>
-  </body>
-</html>
+<div id="content" class="grid">
+  <div id="logo"></div>
+  <div id="loading">
+    <app-loading-indicator></app-loading-indicator>
+  </div>
+</div>
