--- a/src/app/modules/home/pages/welcome-page/welcome-page.component.css
+++ b/src/app/modules/home/pages/welcome-page/welcome-page.component.css
@@ -1,3 +1,38 @@
+/* phone styles */
+.grid {
+  max-width: 100%;
+}
+
+.circle {
+  background-image: url("../../../../../assets/img/welcome-page/Logo_icon.svg");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.text {
+}
+
+.signup-button {
+  grid-column: 2/12;
+  grid-row: 3;
+  padding: 2.4%;
+  border-radius: 100px;
+}
+
+/* tablet styles */
+@media screen and (min-width: 750px) {
+}
+
+/* desktop styles */
+@media screen and (min-width: 1200px) {
+}
+
+/* old things */
+/* .asd {
+  height: 100%;
+}
+
 .circle {
   background-image: url("../../../../../assets/img/welcome-page/Logo_icon.svg");
   background-position: center;
@@ -67,4 +102,4 @@ p {
 
 .addition a {
   color: rgb(0, 183, 255);
-}
+} */
