--- a/src/app/shared/components/custom-button/custom-button.component.css
+++ b/src/app/shared/components/custom-button/custom-button.component.css
@@ -2,6 +2,14 @@
   cursor: pointer;
 }
 
-.warning:hover {
-  background-color: crimson;
+:host {
+  width: 28.5vw;
+  height: 19vw;
+  border: none;
+  border-radius: 0.5vw;
+  background-color: white;
+}
+
+:host:hover {
+  background-color: rgb(239, 252, 255);
 }
