--- a/src/app/modules/home/pages/login-page/login-page.component.css
+++ b/src/app/modules/home/pages/login-page/login-page.component.css
@@ -1,11 +1,133 @@
+.flex {
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
 .circle {
+  background-image: url("../../../../../assets/img/welcome-page/Logo_icon.svg");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+/* phone styles */
+.circle {
+  margin-top: 20px;
+  padding: 60px;
+}
+
+.text h1 {
+  color: rgb(100, 100, 100);
+  font-size: 50px;
+}
+
+.signup-form {
+  width: 100%;
+}
+
+.form-field {
+  width: 70%;
+  margin: 0;
+}
+
+.login-button {
+  margin-top: 2.4vw;
+  background-color: rgb(162, 49, 255);
+  color: white;
+  padding: 20px 35%;
+  border-radius: 100px;
+  font-size: 20px;
+}
+
+.flex-or {
+  display: flex;
+  width: 100%;
+}
+
+.flex-or hr {
+  width: 25%;
+}
+
+.flex-or p {
+  color: rgb(131, 131, 131);
+  font-weight: 50;
+  margin-top: 4%;
+}
+
+.flex-pics-social {
+  margin-top: -20px;
+  display: flex;
+  justify-content: space-around;
+  width: 75%;
+}
+
+.image-social {
+  width: 20%;
+}
+
+.addition {
+  margin-top: -15px;
+  color: rgb(131, 131, 131);
+  font-weight: 100;
+}
+
+.addition a {
+  color: rgb(0, 183, 255);
+}
+
+/* tablet styles */
+@media screen and (min-width: 750px) {
+  .flex {
+    font-size: 18px;
+  }
+
+  .addition {
+    margin-top: 10px;
+  }
+}
+
+/* desktop styles */
+@media screen and (min-width: 1400px) {
+  .flex {
+    font-size: 20px;
+  }
+
+  .circle {
+    padding: 80px;
+  }
+
+  .text h1 {
+    font-size: 60px;
+  }
+
+  .text p {
+    font-size: 32px;
+  }
+
+  .login-button {
+    padding: 20px 33%;
+    margin-top: -20px;
+    font-size: 25px;
+  }
+
+  .image-social {
+    margin-top: -25px;
+    width: 110px;
+  }
+}
+
+/* old things */
+/* .circle {
   background-image: url("../../../../../assets/img/welcome-page/Logo_icon.svg");
   background-position: center;
   background-size: contain;
   width: 6.4vw;
   height: 6.4vw;
   margin: auto;
-  /* background-color: rgb(145, 49, 255); */
+
   border-radius: 100px;
   margin-top: 1.6vw;
   margin-bottom: 0.8vw;
@@ -78,4 +200,4 @@ p {
 
 .addition a {
   color: rgb(0, 183, 255);
-}
+} */
