--- a/src/app/modules/home/pages/login-page/login-page.component.html
+++ b/src/app/modules/home/pages/login-page/login-page.component.html
@@ -1,39 +1,42 @@
 <app-auth-template>
-  <div class="blank"></div>
-  <div class="circle"></div>
-  <h1>LOGIN</h1>
-  <form class="signup-form">
-    <mat-form-field class="form-field">
-      <mat-label> Email </mat-label>
-      <input matInput placeholder="Email" />
-    </mat-form-field>
-    <mat-form-field class="form-field">
-      <mat-label> Password </mat-label>
-      <input matInput placeholder="Password" />
-    </mat-form-field>
-  </form>
-  <div class="login-button">Login</div>
-  <div class="flex-or">
-    <hr />
-    <p>Or</p>
-    <hr />
+  <div class="flex">
+    <div class="circle"></div>
+    <div class="text">
+      <h1>LOGIN</h1>
+    </div>
+    <form class="signup-form">
+      <mat-form-field class="form-field">
+        <mat-label> Email </mat-label>
+        <input matInput placeholder="Email" />
+      </mat-form-field>
+      <mat-form-field class="form-field">
+        <mat-label> Password </mat-label>
+        <input matInput placeholder="Password" />
+      </mat-form-field>
+    </form>
+    <div class="login-button">Login</div>
+    <div class="flex-or">
+      <hr />
+      <p>Or</p>
+      <hr />
+    </div>
+    <div class="flex-pics-social">
+      <!-- <p>facebook</p>
+      <p>google</p>
+      <p>twitter</p> -->
+      <img
+        class="image-social"
+        src="../../../../../assets/img/welcome-page/Facebook.svg"
+      />
+      <img
+        class="image-social"
+        src="../../../../../assets/img/welcome-page/Google.svg"
+      />
+      <img
+        class="image-social"
+        src="../../../../../assets/img/welcome-page/Twitter.svg"
+      />
+    </div>
+    <div class="addition">Don't have an account? <a>Signup</a></div>
   </div>
-  <div class="flex-pics-social">
-    <!-- <p>facebook</p>
-    <p>google</p>
-    <p>twitter</p> -->
-    <img
-      class="image-social"
-      src="../../../../../assets/img/welcome-page/Facebook.svg"
-    />
-    <img
-      class="image-social"
-      src="../../../../../assets/img/welcome-page/Google.svg"
-    />
-    <img
-      class="image-social"
-      src="../../../../../assets/img/welcome-page/Twitter.svg"
-    />
-  </div>
-  <div class="addition">Don't have an account? <a>Signup</a></div>
 </app-auth-template>
