--- a/src/app/modules/home/pages/signup-page/signup-page.component.css
+++ b/src/app/modules/home/pages/signup-page/signup-page.component.css
@@ -1,31 +1,38 @@
+.flex {
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
 .avatar {
-  width: 6.4vw;
-  height: 6.4vw;
-  margin: auto;
-  background-color: rgb(202, 234, 255);
-  /* overflow: hidden; */
+  background-color: rgb(217, 240, 255);
   background-image: url("../../../../../assets/img/welcome-page/will.png");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 100px;
-  margin-top: 1.6vw;
-  margin-bottom: 0.8vw;
 }
 
-h1 {
+/* phone styles */
+.avatar {
+  margin-top: 20px;
+  padding: 60px;
+}
+
+.text h1 {
   color: rgb(100, 100, 100);
-  font-size: 2.4vw;
-  margin-bottom: 0.8vw;
+  font-size: 50px;
 }
 
-p {
-  color: rgb(131, 131, 131);
-  font-weight: 50;
-  font-size: 1.12vw;
-  margin: 0;
+.signup-button {
+  margin-top: 2.4vw;
+  background-color: rgb(162, 49, 255);
+  color: white;
+  padding: 20px 33%;
+  border-radius: 100px;
 }
-
 .signup-form {
   width: 100%;
 }
@@ -33,27 +40,50 @@ p {
 .form-field {
   width: 70%;
   margin: 0;
-  font-size: 0.8vw;
-}
-
-.signup-button {
-  background-color: rgb(162, 49, 255);
-  margin-top: 2.4vw;
-  font-size: 1.12vw;
-  color: white;
-  padding: 2.4%;
-  border-radius: 100px;
-  margin-right: 4%;
-  margin-left: 4%;
 }
 
 .addition {
-  margin-top: 12.8%;
+  margin-top: 20px;
   color: rgb(131, 131, 131);
   font-weight: 100;
-  font-size: 1.12vw;
 }
 
 .addition a {
   color: rgb(0, 183, 255);
+}
+
+/* tablet styles */
+@media screen and (min-width: 750px) {
+  .flex {
+    font-size: 18px;
+  }
+
+  .avatar {
+    margin-top: 2%;
+  }
+
+  .signup-button {
+    font-size: 20px;
+  }
+}
+
+/* desktop styles */
+@media screen and (min-width: 1400px) {
+  .flex {
+    font-size: 20px;
+  }
+
+  .avatar {
+    padding: 80px;
+  }
+
+  .signup-button {
+    padding: 20px 33%;
+    margin-top: -20px;
+    font-size: 25px;
+  }
+
+  .text h1 {
+    font-size: 60px;
+  }
 }
