--- a/src/app/modules/home/pages/loading-page/loading-page.component.html
+++ b/src/app/modules/home/pages/loading-page/loading-page.component.html
@@ -1,6 +1,8 @@
-<div id="content" class="grid">
-  <div id="logo"></div>
-  <div id="loading">
-    <app-loading-indicator></app-loading-indicator>
+<body>
+  <div id="content" class="grid">
+    <div id="logo"></div>
+    <div id="loading">
+      <app-loading-indicator></app-loading-indicator>
+    </div>
   </div>
-</div>
+</body>
