--- a/src/app/modules/home/pages/onboarding-page/onboarding-page.component.css
+++ b/src/app/modules/home/pages/onboarding-page/onboarding-page.component.css
@@ -3,10 +3,76 @@ body {
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
+}
 
-  display: grid;
-  grid-template-columns: 30vw auto 30vw;
-  /* grid-template-rows: 35vh auto auto 30vh; */
+.grid {
+  grid-auto-rows: minmax(50px, auto);
+}
+
+/* phone styles */
+.grid {
+  max-width: 100%;
+  margin: 0;
+}
+
+.logo {
+  background-image: url("../../../../../assets/img/onboarding-page/LogoSlogan.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  grid-column: 2/5;
+  grid-row: 2/4;
+}
+
+.onboard {
+  grid-column: 2/12;
+  grid-row: 5/17;
+}
+
+.slide-content {
+  display: flex;
+  flex-flow: column;
+  border-radius: 10px;
+  padding-bottom: 40%;
+  background-color: white;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.upper {
+  border-radius: 10px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  background-image: url("../../../../../assets/img/onboarding-page/image1.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  padding-bottom: 60%;
+}
+
+/* tablet styles */
+@media screen and (min-width: 750px) {
+  .grid {
+    font-size: 18px;
+  }
+}
+
+/* desktop styles */
+@media screen and (min-width: 1400px) {
+  .grid {
+    font-size: 20px;
+    max-width: 81.25%;
+    margin: 0 auto;
+  }
+}
+
+/* old things */
+/* body {
+  background-image: url("../../../../../assets/img/onboarding-page/BackgroundOnboard.png");
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .title {
@@ -49,4 +115,4 @@ body {
   text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.522);
   margin-top: 4vh;
   margin-right: 2vw;
-}
+} */
